[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["wannasleeprightnow <wannasleeprightnowww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
black = "^24.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
